# mis-builder

./: .copier-answers.yml  .coveragerc  .eslintrc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .pylintrc  .pylintrc-mandatory  .pylintrc-mandatory.rej  .pylintrc.rej  .t2d.yml  .travis.yml  README.md  account_period.py  oca_dependencies.txt  oca_dependencies.txt.rej  period.xml  requirements.txt  test-built.txt  test-requirements.txt
.github/: pull_request_template.md
addon1/: __manifest__.py
docs/: Makefile  changes.rst  conf.py  configuration.rst  configure.rst  contributors.rst  credit.rst  description.rst  develop.rst  developer.rst  footer.rst  history.rst  index.rst  install.rst  intro.rst  make.bat  mis_builder.AUTHORS.rst  mis_builder.CONTRIBUTORS.rst  mis_builder.configure.rst  mis_builder.credit.rst  mis_builder.developer.rst  mis_builder.usage.rst  mis_builder_budget.AUTHORS.rst  mis_builder_budget.CONTRIBUTORS.rst  mis_builder_budget.configuration.rst  mis_builder_budget.configure.rst  mis_builder_budget.usage.rst  mis_builder_demo.AUTHORS.rst  mis_builder_demo.CONTRIBUTORS.rst  mis_builder_demo.usage.rst  quickstart.rst  roadmap.rst  setup.rst  usage.rst
mis_builder/: CHANGES.rst  README.rst  __init__.py  __manifest__.py  __openerp__.py  pyproject.toml
mis_builder_account_generic_report/: __manifest__.py
mis_builder_analytic/: README.rst  __manifest__.py
mis_builder_analytic_distribution_filter/: README.rst  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+404 files in other folders)
