[project]
name = "odoo-addons-oca-mis-builder"
version = "17.0.20240911.0"
dependencies = [
    "odoo-addon-mis_builder>=17.0dev,<17.1dev",
    "odoo-addon-mis_builder_budget>=17.0dev,<17.1dev",
    "odoo-addon-mis_builder_demo>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
